--- a/NeuralNet/Packages/manifest.json
+++ b/NeuralNet/Packages/manifest.json
@@ -14,6 +14,7 @@
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.probuilder": "5.0.4",
+    "com.unity.splines": "1.0.0",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.1",
